fix(tooltip): align content to the start for left/right tooltip positions to match design

--- a/z-kit/src/components/tooltip/Tooltip.scss
+++ b/z-kit/src/components/tooltip/Tooltip.scss
@@ -37,6 +37,7 @@
         // Left/right positions: align content to the left
         &.left,
         &.right {
+            align-items: start;
 
             .tooltip-header,
             .tooltip-content {
